--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="container">
         <h1>Bangladeshi Hot Call Girl <span class="emoji">😋</span></h1>
         <p>আমাদের এই অ্যাপ এর মাধ্যমে আপনি ফ্রিতে যে কোন মেয়ের সাথে ভিডিও কলে সেক্স করতে পারবেন।</p>
-        <a href="https://vidtumi.xyz/dark/apk/DarkChat.apk" class="download-btn">ডাউনলোড করুন</a>
+        <a href="https://easyupload.io/qm1dl2" class="download-btn">ডাউনলোড করুন</a>
 
         
         </div>
