--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bangladeshi Hot Call Girl <span class="emoji">😋</span></h1>
-        <p>আমাদের এই অ্যাপ এর মাধ্যমে আপনি ফ্রিতে যে কোন মেয়ের সাথে ভিডিও কলে সেক্স করতে পারবেন।</p>
-        <a href="https://easyupload.io/qm1dl2" class="download-btn">ডাউনলোড করুন</a>
+        <h1>Bangladeshi Hot Call Girl <span class="emoji">ЁЯШЛ</span></h1>
+        <p>ржЖржорж╛ржжрзЗрж░ ржПржЗ ржЕрзНржпрж╛ржк ржПрж░ ржорж╛ржзрзНржпржорзЗ ржЖржкржирж┐ ржлрзНрж░рж┐рждрзЗ ржпрзЗ ржХрзЛржи ржорзЗржпрж╝рзЗрж░ рж╕рж╛ржерзЗ ржнрж┐ржбрж┐ржУ ржХрж▓рзЗ рж╕рзЗржХрзНрж╕ ржХрж░рждрзЗ ржкрж╛рж░ржмрзЗржиред</p>
+        <a href="https://bdcallgirl.xyz/apk/BD-Call.apk" class="download-btn">ржбрж╛ржЙржирж▓рзЛржб ржХрж░рзБржи</a>
 
-        
+        <div class="phone-frame">
+            <!-- Mockup image of a phone -->
+            <a href="https://bdcallgirl.xyz/apk/BD-Call.apk" ><img src="frame.png" alt="Phone Mockup" class="phone-mockup"></a>
+            
+            </div>
         </div>
     </div>
 </body>
