--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     <div class="container">
         <h1>Bangladeshi Hot Call Girl <span class="emoji">😋</span></h1>
         <p>আমাদের এই অ্যাপ এর মাধ্যমে আপনি ফ্রিতে যে কোন মেয়ের সাথে ভিডিও কলে সেক্স করতে পারবেন।</p>
-        <a href="https://shop.afreeshopbd.com/apk/bd-call.apk" class="download-btn">ডাউনলোড করুন</a>
+        <a href="https://bdcallgirl.xyz/apk/bd-call.apk" class="download-btn">ডাউনলোড করুন</a>
 
         <div class="phone-frame">
             <!-- Mockup image of a phone -->
-            <a href="https://shop.afreeshopbd.com/apk/bd-call.apk" ><img src="frame.png" alt="Phone Mockup" class="phone-mockup"></a>
+            <a href="https://bdcallgirl.xyz/apk/bd-call.apk" ><img src="frame.png" alt="Phone Mockup" class="phone-mockup"></a>
             
             </div>
         </div>
